--- a/projekt-kindertreff-demo.html
+++ b/projekt-kindertreff-demo.html
@@ -23,6 +23,14 @@
       font-family: system-ui, sans-serif;
       background: var(--bg);
       color: var(--text-main);
+
+      background:
+    radial-gradient(
+      1200px 600px at 50% -200px,
+      rgba(79, 110, 247, 0.06),
+      transparent 70%
+    ),
+    var(--bg);
     }
 
     header {
@@ -31,15 +39,7 @@
       padding: 1.25rem;
       text-align: center;
     }
-    header h1 {
-      margin: 0;
-      font-size: 1.35rem;
-      font-weight: 600;
-      letter-spacing: 0.02em;
-    }
-
-
-
+    
     main {
       max-width: 760px;
       margin: auto;
