--- a/index.html
+++ b/index.html
@@ -140,7 +140,8 @@
             </p>
           
             <div class="project-actions">
-              <a href="projekt-kindertreff-demo.html" class="btn">Demo öffnen</a>
+              <a href="#" class="demo-disabled">Demo (in Arbeit)</a>
+              <!--<a href="projekt-kindertreff-demo.html" class="btn">Demo öffnen</a>-->
               <a href="Projekte/kindertreff-info.html" class="btn btn-secondary">Projekt ansehen</a>
             </div>
           
@@ -355,6 +356,7 @@
 
 </body>
 </html>
+
 
 
 
