--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             <h3 id="project-kindertreff">Kindertreff</h3>
           
             <p class="project-subline">
-              Ruhige Spielverabredungen für Kinder – übersichtlich, freiwillig
+              Spielverabredungen für Kinder – übersichtlich, stressfrei
               und ohne sozialen Druck.
             </p>
           
@@ -356,6 +356,7 @@
 
 </body>
 </html>
+
 
 
 
