--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       
       <p>
     Ich entwickle Software und kleinere Anwendungen mit Fokus auf strukturierte Logik,
-    saubere Umsetzung und konzentriertes Arbeiten.
+    saubere Umsetzung und konzentriertes Arbeiten.    
   </p>
 
       <p>
@@ -193,7 +193,7 @@
 
     <div class="project-grid">
       <!-- alte Projekte hier -->
-      <article class="projekt projekt-haupt fade-in" aria-labelledby="projekt-bachelor">
+      <article class="projekt projekt-haupt" aria-labelledby="projekt-bachelor">
         <h3 id="projekt-bachelor">
           Eigenständig entwickeltes Lernprogramm (Bachelorarbeit)
         </h3>      
@@ -356,6 +356,7 @@
 
 </body>
 </html>
+
 
 
 
