--- a/index.html
+++ b/index.html
@@ -111,6 +111,13 @@
     <section class="portfolio" id="portfolio">
       <h2>Ausgewählte Projekte</h2>
 
+      <p class="portfolio-einleitung">
+        Die folgenden Projekte zeigen meinen Ansatz: bewusste Reduktion,
+        klare Entscheidungen und eigenständige technische Umsetzung.
+      </p>
+
+
+
       <!-- NEUES HAUPTPROJEKT -->
         <article class="project-card project-main fade-in" aria-labelledby="project-kindertreff">          
           <div class="project-inner">
@@ -356,6 +363,7 @@
 
 </body>
 </html>
+
 
 
 
