--- a/index.html
+++ b/index.html
@@ -54,31 +54,27 @@
 
     <section class="ueber-mich" id="ueber-mich">
       <h2>Über mich</h2>
+      <p>
+        Ich entwickle Software, Apps und kleinere Anwendungen – von funktionalen Tools
+        bis hin zu einfachen Spielen – mit Fokus auf strukturierte Logik und saubere
+        Umsetzung.
+      </p>
+
       
       <p>
-    Ich entwickle Software und kleinere Anwendungen mit Fokus auf strukturierte Logik,
-    saubere Umsetzung und konzentriertes Arbeiten.    
-  </p>
-
+        Nach einem bewusst gewählten, nicht geradlinigen Bildungsweg habe ich mich auf
+        Programmierung spezialisiert und meine Kenntnisse durch ein Fernstudium zur
+        Android-App-Programmiererin vertieft.
+        Der Schwerpunkt lag auf objektorientierter Programmierung und der eigenständigen
+        Umsetzung funktionaler App-Projekte.
+      </p>
+      
       <p>
-        Nach einem nicht geradlinigen, aber bewusst gewählten Bildungsweg habe ich mich
-        fachlich auf Programmierung spezialisiert und meine Kenntnisse durch ein
-        Fernstudium zur Android-App-Programmiererin vertieft.
-        Dabei lag der Fokus auf objektorientierter Programmierung, Anwendungslogik
-        und der eigenständigen Umsetzung funktionaler App-Projekte.
-      </p>  
-
-  <p>
-    Ich arbeite am produktivsten eigenständig, mit klaren Zielen und ohne unnötige
-    Ablenkung. Remote-Arbeit und asynchrone Zusammenarbeit sehe ich dabei nicht als
-    Einschränkung, sondern als effiziente und zeitgemäße Arbeitsform.
-  </p>
-
-  <p>
-    Technisch interessieren mich vor allem logisches Problemlösen, verständlicher Code
-    und eine saubere Struktur – unabhängig davon, ob es sich um Anwendungen,
-    Tools oder kleinere Spiele handelt.
-  </p>
+        Ich arbeite am produktivsten eigenständig, mit klaren Zielen und ohne unnötige
+        Ablenkung. Remote-Arbeit und asynchrone Zusammenarbeit verstehe ich dabei als
+        effiziente und zeitgemäße Arbeitsform.
+      </p>
+  
     </section>
 
     <section class="arbeitsweise fade-in" id="arbeitsweise">
@@ -363,6 +359,7 @@
 
 </body>
 </html>
+
 
 
 
