--- a/index.html
+++ b/index.html
@@ -55,19 +55,19 @@
     <section class="ueber-mich" id="ueber-mich">
       <h2>Über mich</h2>
       <p>
-        Ich entwickle Software, Apps und kleinere Anwendungen – von funktionalen Tools
-        bis hin zu einfachen Spielen – mit Fokus auf strukturierte Logik und saubere
-        Umsetzung.
+        Ich entwickle Software, Apps und kleinere Anwendungen und gestalte Webseiten –
+        von funktionalen Tools bis hin zu einfachen Spielen und individuellen Lösungen –
+        und unterstütze bei der Umsetzung konkreter Projektideen
+        mit Fokus auf strukturierte Logik und saubere Umsetzung.
       </p>
 
-      
+
       <p>
         Nach einem bewusst gewählten, nicht geradlinigen Bildungsweg habe ich mich auf
-        Programmierung spezialisiert und meine Kenntnisse durch ein Fernstudium zur
-        Android-App-Programmiererin vertieft.
-        Der Schwerpunkt lag auf objektorientierter Programmierung und der eigenständigen
-        Umsetzung funktionaler App-Projekte.
+        Programmierung spezialisiert und meine Kenntnisse durch ein Fernstudium im
+        Bereich Android-App-Entwicklung vertieft.
       </p>
+
       
       <p>
         Ich arbeite am produktivsten eigenständig, mit klaren Zielen und ohne unnötige
@@ -359,6 +359,7 @@
 
 </body>
 </html>
+
 
 
 
