--- a/index.html
+++ b/index.html
@@ -125,11 +125,12 @@
             </p>
           
             <p>
-              Kindertreff ist eine konzeptionelle Web-Demo, die Eltern dabei unterstützt,
-              spontane Spielverabredungen einfacher zu koordinieren.
+              Kindertreff ist eine von mir konzipierte und umgesetzte Web-Demo zur
+              vereinfachten Koordination spontaner Spielverabredungen.
               Verfügbarkeiten werden zeitlich begrenzt eingetragen –
               ohne Chat, ohne öffentliche Profile und ohne dauerhafte Datenspeicherung.
             </p>
+
           
             <ul class="project-highlights">
               <li><strong>Problem:</strong> Aufwendige Abstimmung, viele Einzelanfragen, organisatorischer Stress</li>
@@ -359,6 +360,7 @@
 
 </body>
 </html>
+
 
 
 
