--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
     <section class="ueber-mich" id="ueber-mich">
       <h2>Über mich</h2>
       <p>
-        Ich entwickle Software, Apps und kleinere Anwendungen und gestalte Webseiten –
+        Ich gestalte Webseiten, entwickle Software, Apps und kleinere Anwendungen –
         von funktionalen Tools bis hin zu einfachen Spielen und individuellen Lösungen –
-        und unterstütze bei der Umsetzung konkreter Projektideen
-        mit Fokus auf strukturierte Logik und saubere Umsetzung.
+        und unterstütze die Umsetzung konkreter Projektideen mit Fokus auf strukturierte
+        Logik und saubere Umsetzung.
       </p>
 
 
@@ -360,6 +360,7 @@
 
 </body>
 </html>
+
 
 
 
