--- a/index.html
+++ b/index.html
@@ -77,6 +77,19 @@
   
     </section>
 
+    <section class="angebot">
+      <h2>Wobei ich unterstütze</h2>
+    
+      <ul class="angebot-list">
+        <li>Konzeption und Umsetzung kleiner Web- und Softwareprojekte</li>
+        <li>Entwicklung von Tools, Apps und interaktiven Demos</li>
+        <li>Gestaltung klar strukturierter Webseiten</li>
+        <li>Unterstützung bei der technischen Umsetzung konkreter Projektideen</li>
+        <li>Eigenständige Remote-Arbeit mit klarer Kommunikation</li>
+      </ul>
+    </section>
+
+
     <section class="arbeitsweise fade-in" id="arbeitsweise">
       <h2>Arbeitsweise</h2>
 
@@ -360,6 +373,7 @@
 
 </body>
 </html>
+
 
 
 
