--- a/index.html
+++ b/index.html
@@ -96,23 +96,25 @@
       <ul class="arbeitsweise-list">
         <li>
           <strong>Strukturiert & lösungsorientiert</strong><br>
-          Ich arbeite mich systematisch in Probleme ein und lege Wert auf nachvollziehbare,
-          wartbare Lösungen – unabhängig davon, ob es sich um Desktop-, Web- oder mobile Anwendungen handelt.
+          Ich arbeite mich systematisch in die jeweilige Aufgabenstellung ein und entwickle
+          nachvollziehbare, wartbare Lösungen für konkrete Anwendungsfälle.
         </li>
 
         <li>
           <strong>Eigenständig & zuverlässig</strong><br>
-          Remote-Arbeit bedeutet für mich klare Absprachen, selbstständiges Vorgehen und verlässliche Ergebnisse.
+          Projekte setze ich eigenverantwortlich um – mit klaren Absprachen,
+          transparenter Kommunikation und verlässlichen Ergebnissen.
         </li>
 
         <li>
           <strong>Fokus auf Logik & Funktion</strong><br>
-          Ich mag klare Abläufe, verständlichen Code und Anwendungen, die funktionieren – nicht nur gut aussehen.
+          Mein Schwerpunkt liegt auf klarer Anwendungslogik, verständlichem Code
+          und Lösungen, die funktionieren – nicht nur gut aussehen.          
         </li>
 
         <li>
           <strong>Ruhige, effiziente Zusammenarbeit</strong><br>
-          Ich arbeite gerne in kleinen Teams oder asynchron, mit klarer Kommunikation und ohne unnötige Meetings.
+          Ich arbeite bevorzugt remote und asynchron, mit klarer Kommunikation und ohne unnötige Meetings.
         </li>
       </ul>
     </section>
@@ -376,6 +378,7 @@
 
 </body>
 </html>
+
 
 
 
