--- a/datenschutz.html
+++ b/datenschutz.html
@@ -14,72 +14,59 @@ Katrin Mack<br>
 E-Mail: <a href="mailto:woehrle.katrin@gmail.com">woehrle.katrin@gmail.com</a>
 </p>
 
-
-
-<h2>2. Hosting und Server-Logfiles</h2>
+<h2>2. Hosting und Server</h2>
 <p>
-Diese Website wird bei einem externen Hosting-Anbieter betrieben.
-Beim Aufruf der Website erhebt und speichert der Hosting-Anbieter
-automatisch Informationen in sogenannten Server-Logfiles, die Ihr
-Browser automatisch übermittelt.
+Diese Website wird bei GitHub Pages gehostet. Die Domain und der Server liegen bei Hetzner Online GmbH, Deutschland.
 </p>
 
 <p>
-Dies sind insbesondere:
+Derzeit erfolgt der Zugriff über die Hetzner-Domain als Weiterleitung auf GitHub. Diese Weiterleitung ist vorübergehend und wird in Zukunft entfallen, sobald die Website direkt auf dem Hetzner-Server verfügbar ist.
+</p>
+
+<h2>3. Web-Anwendung „Kindertreff“</h2>
+<p>
+Für die Web-Anwendung <strong>Kindertreff</strong> wird PocketBase auf dem Hetzner-Server genutzt. Dort werden die von Nutzern eingetragenen Spielverfügbarkeiten gespeichert, um sie allen Nutzern der App anzeigen zu können.
+</p>
+
+<p>
+Erhobene Daten sind:
 </p>
 <ul>
-  <li>IP-Adresse</li>
-  <li>Datum und Uhrzeit der Anfrage</li>
-  <li>Browsertyp und Browserversion</li>
-  <li>Betriebssystem</li>
-  <li>Referrer-URL</li>
+  <li>Vorname oder Alias des Kindes</li>
+  <li>Datum und Uhrzeit der Verfügbarkeit</li>
+  <li>Optional: Hinweise oder Ort der Spielverabredung</li>
 </ul>
 
-  <p>
-Der Hosting-Anbieter ist GitHub Inc., Serverstandorte innerhalb der EU.
-</p>
-
-
 <p>
-Die Verarbeitung erfolgt auf Grundlage von Art. 6 Abs. 1 lit. f DSGVO
-(berechtigtes Interesse an einem sicheren und stabilen Betrieb der Website).
-</p>
-
-
-<h2>3. Kontaktformular</h2>
-
-<p>
-Wenn Sie mir über das Kontaktformular Anfragen zukommen lassen,
-werden Ihre Angaben aus dem Formular inklusive der von Ihnen dort
-angegebenen Kontaktdaten zwecks Bearbeitung der Anfrage und für den
-Fall von Anschlussfragen bei mir gespeichert.
+Die Daten werden ausschließlich für die Darstellung der Verfügbarkeiten innerhalb der Web-Anwendung verwendet. Es werden keine sensiblen Daten wie Nachname, Adresse oder Kontaktdaten gespeichert. 
 </p>
 
 <p>
-Die Verarbeitung der in das Kontaktformular eingegebenen Daten erfolgt
-auf Grundlage von Art. 6 Abs. 1 lit. b DSGVO (vorvertragliche Maßnahmen)
-bzw. Art. 6 Abs. 1 lit. f DSGVO (berechtigtes Interesse).
+Alle Einträge werden automatisch nach einer Woche gelöscht, um Übersichtlichkeit zu gewährleisten. Nutzer können ihre eigenen Einträge jederzeit selbst löschen.
 </p>
 
 <p>
-Für die Bereitstellung des Kontaktformulars nutze ich den Dienst
-<strong>Basin</strong>, einen Anbieter mit Serverstandorten in der EU.
-Die über das Formular übermittelten Daten werden verschlüsselt übertragen
-und ausschließlich zur Bearbeitung Ihrer Anfrage verwendet.
+Die Verarbeitung erfolgt auf Grundlage von Art. 6 Abs. 1 lit. f DSGVO (berechtigtes Interesse: Bereitstellung einer funktionalen Web-Anwendung).
+</p>
+
+<h2>4. Kontaktformular</h2>
+<p>
+Wenn Sie mir über das Kontaktformular Anfragen zukommen lassen, werden Ihre Angaben aus dem Formular inklusive der von Ihnen dort angegebenen Kontaktdaten zwecks Bearbeitung der Anfrage und für den Fall von Anschlussfragen bei mir gespeichert.
 </p>
 
 <p>
-Mit dem Anbieter Basin besteht ein Vertrag zur Auftragsverarbeitung
-gemäß Art. 28 DSGVO.
+Die Verarbeitung erfolgt auf Grundlage von Art. 6 Abs. 1 lit. b DSGVO (vorvertragliche Maßnahmen) bzw. Art. 6 Abs. 1 lit. f DSGVO (berechtigtes Interesse).
 </p>
 
 <p>
-Die Daten werden spätestens nach 6 Monaten gelöscht,
-sofern keine gesetzlichen Aufbewahrungspflichten entgegenstehen.
+Alle über das Kontaktformular übermittelten Daten werden verschlüsselt per HTTPS übertragen und ausschließlich zur Bearbeitung Ihrer Anfrage verwendet.
 </p>
 
+<p>
+Die Daten werden spätestens nach 6 Monaten gelöscht, sofern keine gesetzlichen Aufbewahrungspflichten entgegenstehen.
+</p>
 
-<h2>4. Rechte der betroffenen Personen</h2>
+<h2>5. Rechte der betroffenen Personen</h2>
 <p>
 Sie haben jederzeit das Recht:
 </p>
@@ -95,12 +82,10 @@ Sie haben jederzeit das Recht:
 Zudem haben Sie das Recht, sich bei einer zuständigen Datenschutzaufsichtsbehörde zu beschweren.
 </p>
 <p>
-Zuständige Aufsichtsbehörde ist der Landesbeauftragte für den Datenschutz
-und die Informationsfreiheit Baden-Württemberg (LfDI BW).
+Zuständige Aufsichtsbehörde ist der Landesbeauftragte für den Datenschutz und die Informationsfreiheit Baden-Württemberg (LfDI BW).
 </p>
 
-
-  <h2>5. Cookies und Tracking</h2>
+<h2>6. Cookies und Tracking</h2>
 <p>
 Diese Website verwendet keine Cookies und keine Tracking- oder Analyse-Tools.
 </p>
@@ -108,15 +93,7 @@ Diese Website verwendet keine Cookies und keine Tracking- oder Analyse-Tools.
 Die Übertragung Ihrer Daten erfolgt verschlüsselt mittels HTTPS.
 </p>
 
-  
 <p><em>Stand: Januar 2026</em></p>
-
-
 
 </body>
 </html>
-
-
-
-
-
