Fix: PocketBase über /api angebunden

--- a/projekt-kindertreff-demo.html
+++ b/projekt-kindertreff-demo.html
@@ -206,7 +206,7 @@ button.secondary:hover {
 ========================= */
 
 // Ändere die URL auf deine Domain / Reverse Proxy URL
-const pb = new PocketBase("https://in-finn-it.de/api"); // <- so sollte es sein
+const pb = new PocketBase("/api");
 let currentUser = null;
 
 /* =========================
