--- a/projekt-kindertreff-demo.html
+++ b/projekt-kindertreff-demo.html
@@ -71,75 +71,106 @@
 /* =========================
    PocketBase Setup
 ========================= */
-const pb = new PocketBase("/api"); // <--- Deine Domain/Reverse Proxy
-let currentUser = null;
+
+// PocketBase über Nginx-Reverse-Proxy
+const pb = new PocketBase("/api");
 
 /* =========================
-   User Handling (ohne Popup)
+   User Handling (lokale Alias-ID)
 ========================= */
-async function getOrCreateUser(alias){
-  const savedUserId = localStorage.getItem("kindertreffUser");
-  if(savedUserId){
-    try{
-      currentUser = await pb.collection("users").getOne(savedUserId);
-      return currentUser;
-    }catch{ localStorage.removeItem("kindertreffUser"); }
-  }
-  const user = await pb.collection("users").create({username: alias});
-  localStorage.setItem("kindertreffUser", user.id);
-  currentUser = user;
-  return user;
+
+let currentUserId = localStorage.getItem("kindertreffUser");
+if (!currentUserId) {
+  currentUserId = crypto.randomUUID();
+  localStorage.setItem("kindertreffUser", currentUserId);
 }
 
 /* =========================
    Date Helpers
 ========================= */
-function getNextDays(){
-  const days=[]; const today=new Date(); today.setHours(0,0,0,0);
-  for(let i=0;i<7;i++){ const d=new Date(today); d.setDate(today.getDate()+i); days.push(d.toISOString().split("T")[0]); }
+
+function getNextDays() {
+  const days = [];
+  const today = new Date();
+  today.setHours(0,0,0,0);
+
+  for (let i = 0; i < 7; i++) {
+    const d = new Date(today);
+    d.setDate(today.getDate() + i);
+    days.push(d.toISOString().split("T")[0]);
+  }
   return days;
 }
 
-function formatDay(dateStr,index){
-  if(index===0) return "Heute";
-  if(index===1) return "Morgen";
-  return new Date(dateStr).toLocaleDateString("de-DE",{weekday:"short",day:"numeric",month:"numeric"});
+function formatDay(dateStr, index) {
+  if (index === 0) return "Heute";
+  if (index === 1) return "Morgen";
+  return new Date(dateStr).toLocaleDateString("de-DE", {
+    weekday: "short",
+    day: "numeric",
+    month: "numeric"
+  });
 }
 
-function isExpired(entry){ return new Date(entry.date+"T"+entry.end)<new Date(); }
+function isExpired(entry) {
+  return new Date(entry.date + "T" + entry.end) < new Date();
+}
 
 /* =========================
    Load & Render
 ========================= */
-async function loadEntries(){
-  const res = await pb.collection("entries").getFullList({sort:"date,start"});
-  return res.map(e=>({...e,date:e.date.split(" ")[0]}));
+
+async function loadEntries() {
+  try {
+    const res = await pb.collection("entries").getFullList({ sort: "date,start" });
+    return res.map(e => ({ ...e, date: e.date.split(" ")[0] }));
+  } catch {
+    console.warn("Keine Einträge geladen (PB evtl. offline)");
+    return [];
+  }
 }
 
-async function render(){
-  const container=document.getElementById("week");
-  container.innerHTML="";
-  let entries=[];
-  try{entries=await loadEntries();}catch(e){console.warn("Keine Einträge geladen (PB evtl. offline)");}
-  const days=getNextDays();
-  days.forEach((date,index)=>{
-    const dayEl=document.createElement("div");
-    dayEl.className="day";
-    const list=entries.filter(e=>e.date===date);
-    dayEl.innerHTML=`<h3>${formatDay(date,index)}</h3>${list.length?"":"<small>Keine Einträge</small>"}`;
-    list.forEach(e=>{
-      const expired=isExpired(e);
-      const isOwn=currentUser&&e.createdBy===currentUser.id;
-      const el=document.createElement("div");
-      el.className="entry"+(expired?" expired":"");
-      el.innerHTML=`<strong>${e.name}</strong>${expired?" <em>(inzwischen verplant)</em>":""}<br>(${e.start}–${e.end})<br><small>${e.group}${e.note?" · "+e.note:""}</small>${isOwn?`<br><button class="secondary" data-id="${e.id}">Löschen</button>`:""}`;
+async function render() {
+  const container = document.getElementById("week");
+  container.innerHTML = "";
+
+  const entries = await loadEntries();
+  const days = getNextDays();
+
+  days.forEach((date, index) => {
+    const dayEl = document.createElement("div");
+    dayEl.className = "day";
+
+    const list = entries.filter(e => e.date === date);
+
+    dayEl.innerHTML = `
+      <h3>${formatDay(date,index)}</h3>
+      ${list.length ? "" : "<small>Keine Einträge</small>"}
+    `;
+
+    list.forEach(e => {
+      const expired = isExpired(e);
+      const isOwn = e.localUserId === currentUserId;
+
+      const el = document.createElement("div");
+      el.className = "entry" + (expired ? " expired" : "");
+
+      el.innerHTML = `
+        <strong>${e.name}</strong>
+        ${expired ? " <em>(inzwischen verplant)</em>" : ""}
+        <br>(${e.start}–${e.end})<br>
+        <small>${e.group}${e.note ? " · " + e.note : ""}</small>
+        ${isOwn ? `<br><button class="secondary" data-id="${e.id}">Löschen</button>` : ""}
+      `;
       dayEl.appendChild(el);
     });
+
     container.appendChild(dayEl);
   });
 
-  document.querySelectorAll("button[data-id]").forEach(btn=>{
-    btn.addEventListener("click",async()=>{
+  // Löschen eigener Einträge
+  document.querySelectorAll("button[data-id]").forEach(btn => {
+    btn.addEventListener("click", async () => {
       await pb.collection("entries").delete(btn.dataset.id);
       render();
     });
@@ -149,27 +180,25 @@ async function render(){
 /* =========================
    Form Handling
 ========================= */
-document.getElementById("entryForm").addEventListener("submit",async e=>{
+
+document.getElementById("entryForm").addEventListener("submit", async e => {
   e.preventDefault();
-  const nameInput=document.getElementById("name");
-  const groupInput=document.getElementById("group");
-  const dateInput=document.getElementById("date");
-  const startInput=document.getElementById("start");
-  const endInput=document.getElementById("end");
-  const noteInput=document.getElementById("note");
 
-  const alias=nameInput.value.trim();
-  if(!alias){alert("Bitte gib einen Namen oder Alias an.");return;}
+  const alias = name.value.trim();
+  if (!alias) {
+    alert("Bitte gib einen Namen oder Alias an.");
+    return;
+  }
 
-  await getOrCreateUser(alias);
-
+  // Eintrag erstellen mit lokalem User-Identifier
   await pb.collection("entries").create({
     name: alias,
-    group: groupInput.value,
-    date: dateInput.value,
-    start: startInput.value,
-    end: endInput.value,
-    note: noteInput.value,    
+    group: group.value,
+    date: date.value,
+    start: start.value,
+    end: end.value,
+    note: note.value,
+    localUserId: currentUserId
   });
 
   e.target.reset();
@@ -179,8 +208,10 @@ document.getElementById("entryForm").addEventListener("submit",async e=>{
 /* =========================
    Init
 ========================= */
+
 render();
 </script>
+
 
 </body>
 </html>
